--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
 		<div class="container">
     		<div class="blurb">
         		<h1>Hi there, I'm Mudit Rastogi!</h1>
-				<p>Deep Learning Engineer</a></p>
+				<p>Deep Learning Engineer
+				Get to know more about me</a></p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
