--- a/index.html
+++ b/index.html
@@ -1,31 +1,8 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<title>Mudit Rastogi AI </title>
-		<!-- link to main stylesheet -->
-		<link rel="stylesheet" type="text/css" href="/css/main.css">
-	</head>
-	<body>
-		<nav>
-    		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="/about">About</a></li>
-        		<li><a href="/cv">CV</a></li>
-        		<li><a href="/blog">Blog</a></li>
-    		</ul>
-		</nav>
-		<div class="container">
-    		<div class="blurb">
-        		<h1>Hi there, I'm Mudit Rastogi!</h1>
-				<p>Deep Learning Engineer
-				Get to know more about me</a></p>
-    		</div><!-- /.blurb -->
-		</div><!-- /.container -->
-		<footer>
-    		<ul>
-        		<li><a href="mailto:mudit.rastogi.cv@gmail.com">email</a></li>
-        		<li><a href="https://github.com/muditrastogi">github.com/muditrastogi</a></li>
-			</ul>
-		</footer>
-	</body>
-</html>
+---
+layout: default
+title: Hank Quinlan, Horrible Cop
+---
+<div class="blurb">
+	<h1>Hi there, I'm Mudit Rastogi</h1>
+	<p>Deep Learning Engineer  <a href="/about">Read more about my life...</a></p>
+</div><!-- /.blurb -->
